syntax = "proto3";

import "scalapb/scalapb.proto";
//import "google/protobuf/timestamp.proto";

package com.jc.logging.proto;

option (scalapb.options) = {
  package_name: "com.jc.logging.proto"
//  import: "com.jc.user.api.proto._"
  flat_package: true
};

enum LogLevel {
    TRACE = 0;
    DEBUG = 1;
    INFO = 2;
    WARN = 3;
    ERROR = 4;
    FATAL = 5;
    OFF = 6;
}

message LoggerConfiguration {
    string name = 1 [(scalapb.field).no_box = false];
    LogLevel configuredLevel = 2;
    LogLevel effectiveLevel = 3;
}

message SetLoggerConfigurationReq {
    string name = 1;
    LogLevel level = 2;
}

message GetLoggerConfigurationReq {
    string name = 1;
}

message LoggerConfigurationRes {
    LoggerConfiguration configuration = 1;
    repeated LogLevel levels = 2;
}

message GetLoggerConfigurationsReq {
}

message LoggerConfigurationsRes {
    repeated LoggerConfiguration configurations = 1;
    repeated LogLevel levels = 2;
}

service LoggingSystemApiService {

    rpc SetLoggerConfiguration (SetLoggerConfigurationReq) returns (LoggerConfigurationRes) {
    }

    rpc GetLoggerConfiguration (GetLoggerConfigurationReq) returns (LoggerConfigurationRes) {
    }

    rpc GetLoggerConfigurations (GetLoggerConfigurationsReq) returns (LoggerConfigurationsRes) {
    }

}
